Changelog
=========

2.0 (unreleased)
----------------

- Plone 4.3 compatibility (for < 4.3 use < 2.0)
- removed themeroller integration
- added readme for manual theme integration


1.1.0 (2012-09-21)
------------------

- Removed checkbox and radiobox handling.


1.0.5 (2012-08-17)
------------------

- Fixed Install error with newer collective.js.jqueryui versions
- Plone 4.2 compatibility and tests

1.0.4 (unreleased)
------------------

- Fixed action menu display


1.0.3 (2012-03-17)
------------------

- Pinned plone.app.theming to avoid zmi styling
- Fully removed "not-zmi" styling rules


1.0.2 (2012-03-12)
------------------

- Fixed related Items and categorisation (#4)


1.0.1 (2011-10-21)
------------------

- Fixed manage portlet links (#3)
- Fixed setuphandler execution


1.0 (2011-06-23)
----------------

- re-added radio box styling
- tuned rules.xml to not style zmi pages
- Add french translation [toutpt]
- Updated spanish translation [macagua]


1.0rc1 (2011-06-12)
-------------------

- Major rewrite to apply manipulations via plone.app.theming/diazo
- removed "settings" panel.


0.40 (2011-05-28)
-----------------

- removed own jquery.ui integration and use collective.js.jqueryui (reinstall via quickinstall required!)
- collective.js.jqueryui's sunburst theme integrated with special resource handling
- re-added validation of theme name characters
- made the font size of the default start theme a little smaller
- udpated pot file and german translations
- sorting of theme names


0.34 (2011-05-17)
-----------------

- IE7 Fix for global tabs


0.33 (2011-05-06)
-----------------

- do not show the "enable cookie" status message, it it is not visible


0.32 (2011-04-30)
-----------------

- Show Uninstall in Title of profile to not confuse plone-admins ;-) [jensens]
- handle BadZipfile exceptions
- updated jquery.ui to 1.8.12


0.31 (2011-03-07)
-----------------

- added tests
- added selenium tests
- updated jquery.ui to 1.8.10